--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -192,7 +192,7 @@
                     android:layout_marginLeft="5dip"
                     android:layout_toRightOf="@id/weather_img"
                     android:singleLine="true"
-                    android:text="今天 星期三"
+                    android:text="今天sss 星期三"
                     android:textColor="@android:color/white"
                     android:textSize="20sp" />
                 <!-- 温度范围 -->
